imagen 1 para instalación de anaconda

--- a/clases/0_formato_clases_fundamentos_programacion/4_formato_clase_funda_programacion.ipynb
+++ b/clases/0_formato_clases_fundamentos_programacion/4_formato_clase_funda_programacion.ipynb
@@ -360,7 +360,8 @@
     "* Lunes 8-12:    \n",
     "* Martes 9-11 M:  \n",
     "* Martes 2 a 6 PM:   \n",
-    "* Miércoles 9 a 11 M:   \n",
+    "* Miércoles 9 a 11 M:  \n",
+    "* Jueves 8 a 12 M: \n",
     "* Jueves 2 a 6 PM:    \n",
     "* Viernes 8 - 12 M:    \n",
     "* Sábados 8-12 Asesorías y espacio para retroalimentación y apoyo al trabajo independiente.   "
