--- a/clases/unidad1/2_chapter.ipynb
+++ b/clases/unidad1/2_chapter.ipynb
@@ -380,20 +380,96 @@
     "\n",
     "# Downloading and installing the Anaconda package   \n",
     "\n",
-    "Aquí, tenemos los pasos de instalación de Anaconda en la máquina con Microsoft Windows 10. Paso 1: Vaya a https://www.anaconda.com/distribution/#download-section, obtendrá la pantalla que se muestra a continuación y haga clic en el botón Descargar.  \n",
-    "\n"
+    "Aquí, tenemos los pasos de instalación de Anaconda en la máquina con Microsoft Windows 10. Paso 1: Vaya a https://www.anaconda.com/distribution/#download-section, obtendrá la pantalla que se muestra a continuación y haga clic en el botón Descargar.  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "210f6ddc",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<img src = 'https://github.com/marco-canas/fundamentos_de_programacion/blob/main/images/anaconda_1.png?raw=true'>"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "f236e6cf",
    "metadata": {},
+   "source": [
+    "## Paso 2:   \n",
+    "\n",
+    "Una vez que haga clic en la página de descarga, comenzará a descargar el archivo exe de instalación (Anaconda3-2021.05-Windows-x86_64.exe)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7456f823",
+   "metadata": {},
+   "source": [
+    "<img src = ''> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3e5b637",
+   "metadata": {},
+   "source": [
+    "En la captura de pantalla anterior, puede ver el inicio de la descarga del archivo exe de Anaconda. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df8f281a",
+   "metadata": {},
+   "source": [
+    "## Paso 3:  \n",
+    "\n",
+    "Una vez completada la descarga, haga clic derecho en el archivo de instalación (Anaconda3-2021.05-Windows-x86_64.exe) y seleccione \"Ejecutar como administrador\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5428614",
+   "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7456f823",
+   "id": "841ec027",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80b5b467",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c1cc195",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31a27686",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d91680f2",
    "metadata": {},
    "outputs": [],
    "source": []
