--- a/clases/unidad1/2_chapter.ipynb
+++ b/clases/unidad1/2_chapter.ipynb
@@ -407,7 +407,7 @@
    "id": "7456f823",
    "metadata": {},
    "source": [
-    "<img src = ''> "
+    "<img src = 'https://github.com/marco-canas/fundamentos_de_programacion/blob/main/images/anaconda_descarga_2.png?raw=true'> "
    ]
   },
   {
