--- a/clases/unidad1/2_chapter.ipynb
+++ b/clases/unidad1/2_chapter.ipynb
@@ -497,7 +497,14 @@
    "id": "1dfb0ee0",
    "metadata": {},
    "source": [
-    "# Probando la instalación.   \n",
+    "# Probando la instalación.   \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58b875a2",
+   "metadata": {},
+   "source": [
     "\n",
     "Tras completar la instalación de Anaconda, comprobaremos la configuración de Python y Jupyter Notebook. ¿Se han instalado correctamente? Para verificar la instalación, siga estos pasos:"
    ]
@@ -513,7 +520,7 @@
     "\n",
     "Presione Windows + R para abrir el cuadro Ejecutar y presione Enter después de escribir cmd dentro del indicador.  \n",
     "\n",
-    "<img src = ''>"
+    "<img src = 'https://github.com/marco-canas/fundamentos_de_programacion/blob/main/images/cmd_4.png?raw=true'>"
    ]
   },
   {
@@ -525,7 +532,7 @@
     "\n",
     "Para comprobar si Python está instalado, escriba Python –-version en el símbolo del sistema y pulse Intro. Si obtiene un resultado como el de la siguiente captura de pantalla, significa que Python se instaló correctamente:\n",
     "\n",
-    "<img src = ''>"
+    "<img src = 'https://github.com/marco-canas/fundamentos_de_programacion/blob/main/images/python_version_5.png?raw=true'>"
    ]
   },
   {
@@ -537,13 +544,31 @@
     "\n",
     "Ahora, escribe \"Python\" y pulsa Intro para iniciar el Interactive Python Shell. Obtendrás un resultado como el de la siguiente captura de pantalla:  \n",
     "\n",
-    "<ing src = ''>"
+    "<img src = 'https://github.com/marco-canas/fundamentos_de_programacion/blob/main/images/python_6.png?raw=true'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbaec6c3",
+   "metadata": {},
+   "source": [
+    "## Paso 4: \n",
+    "\n",
+    "Ahora escriba print(“Análisis de datos con Python”) y presione Intro para ejecutar la instrucción print. Si la instalación se realizó correctamente, obtendrá un resultado como el de la siguiente captura de pantalla:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbaec6c3",
+   "id": "29bcd984",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a81eee7",
    "metadata": {},
    "outputs": [],
    "source": []
