--- a/clases/unidad1/2_chapter.ipynb
+++ b/clases/unidad1/2_chapter.ipynb
@@ -554,24 +554,30 @@
    "source": [
     "## Paso 4: \n",
     "\n",
-    "Ahora escriba print(“Análisis de datos con Python”) y presione Intro para ejecutar la instrucción print. Si la instalación se realizó correctamente, obtendrá un resultado como el de la siguiente captura de pantalla:"
+    "Ahora escriba print(“Análisis de datos con Python”) y presione Intro para ejecutar la instrucción print. Si la instalación se realizó correctamente, obtendrá un resultado como el de la siguiente captura de pantalla:\n",
+    "\n",
+    "<img src = 'https://github.com/marco-canas/fundamentos_de_programacion/blob/main/images/print_7.png?raw=true'> "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "29bcd984",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Paso 4: \n",
+    "\n",
+    "Para salir del shell interactivo de Python, escriba quit() y presione Enter.\n",
+    "\n",
+    "<img src = ''> "
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "2a81eee7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Ya hemos visto cómo ejecutar el código Python con el intérprete interactivo de Python. Veamos cómo podemos usar Jupiter Notebook para ejecutarlo."
+   ]
   },
   {
    "cell_type": "code",
