--- a/clases/unidad1/2_chapter.ipynb
+++ b/clases/unidad1/2_chapter.ipynb
@@ -568,7 +568,7 @@
     "\n",
     "Para salir del shell interactivo de Python, escriba quit() y presione Enter.\n",
     "\n",
-    "<img src = ''> "
+    "<img src = 'https://github.com/marco-canas/fundamentos_de_programacion/blob/main/images/quit_8.png?raw=true'> "
    ]
   },
   {
@@ -580,27 +580,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "073eb057",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Ejecución y prueba de Jupyter Notebook  \n",
+    "\n",
+    "Jupyter Notebook es una plataforma popular para escribir y ejecutar código Python entre científicos y analistas de datos."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "1f1da19e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Esta sección del capítulo mostrará cómo ejecutar Jupyter Notebook y el código Python. "
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "id": "5c0c9a83",
+   "metadata": {},
+   "source": [
+    "## Paso 1: \n",
+    "\n",
+    "Primero, creemos un directorio de trabajo (una carpeta simple de Windows) escribiendo el siguiente comando en cmd: mkdir Data_Analysis_with_python  \n",
+    "\n",
+    "<img src = ''>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "98d37796",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
