--- a/clases/unidad1/2_chapter.ipynb
+++ b/clases/unidad1/2_chapter.ipynb
@@ -606,19 +606,33 @@
     "\n",
     "Primero, creemos un directorio de trabajo (una carpeta simple de Windows) escribiendo el siguiente comando en cmd: mkdir Data_Analysis_with_python  \n",
     "\n",
-    "<img src = ''>"
+    "<img src = 'https://github.com/marco-canas/fundamentos_de_programacion/blob/main/images/mkdir_9.png?raw=true'>"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "98d37796",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Paso 2: \n",
+    "\n",
+    "Luego, cambia el directorio escribiendo cd Data_Analysis_with_python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76b94c35",
+   "metadata": {},
+   "source": [
+    "## Paso 3: \n",
+    "\n",
+    "Ahora, escriba Jupyter Notebook en cmd y presione Enter."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76b94c35",
+   "id": "86f618af",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -626,7 +640,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86f618af",
+   "id": "038623e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb530a58",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f0711df",
    "metadata": {},
    "outputs": [],
    "source": []
