chapter 1 para video

--- a/clases/unidad1/2_chapter.ipynb
+++ b/clases/unidad1/2_chapter.ipynb
@@ -604,7 +604,9 @@
    "source": [
     "## Paso 1: \n",
     "\n",
-    "Primero, creemos un directorio de trabajo (una carpeta simple de Windows) escribiendo el siguiente comando en cmd: mkdir Data_Analysis_with_python  \n",
+    "Primero, abrimos la terminal Anaconda Prompt. Para abrir la terminal Anaconda Prompt, haga clic en el botón Inicio de Windows y escriba Anaconda Prompt en el cuadro de búsqueda. Haga clic en Anaconda Prompt en los resultados de la búsqueda para abrir la terminal Anaconda Prompt.\n",
+    "\n",
+    "Luego creemos un directorio de trabajo (una carpeta simple de Windows) escribiendo el siguiente comando en Anaconda Prompt: mkdir Data_Analysis_with_python  \n",
     "\n",
     "<img src = 'https://github.com/marco-canas/fundamentos_de_programacion/blob/main/images/mkdir_9.png?raw=true'>"
    ]
@@ -616,7 +618,7 @@
    "source": [
     "## Paso 2: \n",
     "\n",
-    "Luego, cambia el directorio escribiendo cd Data_Analysis_with_python"
+    "Luego, cambia el directorio escribiendo `cd Data_Analysis_with_python`. "
    ]
   },
   {
@@ -624,18 +626,22 @@
    "id": "76b94c35",
    "metadata": {},
    "source": [
-    "## Paso 3: \n",
+    "## [Paso 3:](https://read.amazon.com/?asin=B0BBB56L4X&ref_=kwl_kr_iv_rec_1) \n",
     "\n",
-    "Ahora, escriba Jupyter Notebook en cmd y presione Enter."
+    "Ahora, escriba `jupyter notebook` en cmd y presione Enter.  \n",
+    "\n",
+    "<img src = 'https://github.com/marco-canas/fundamentos_de_programacion/blob/main/images/jupyter_notebook_10.png?raw=true'>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "86f618af",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Iniciará el servidor local y obtendrá una página web de Jupyter Notebook como se muestra a continuación.  \n",
+    "\n",
+    "<img src = ''>"
+   ]
   },
   {
    "cell_type": "code",
