ya tengo cronograma y evaluación para el curso de Fundamentos de programación

--- a/quices/quiz_2.ipynb
+++ b/quices/quiz_2.ipynb
@@ -11,26 +11,25 @@
    "id": "2371cace",
    "metadata": {},
    "source": [
-    "¡Vamos con ese **Quiz 2**, profe! 🔥\n",
-    "Lo diseño **alineado al cronograma**, con foco en **pensamiento algorítmico**, **lectura de código** y **uso correcto de estructuras de control**, que es justo donde suele aparecer la primera “curva” cognitiva del curso.\n",
+    "Este es un diseño **alineado al cronograma**, con foco en **pensamiento algorítmico**, **lectura de código** y **uso correcto de estructuras de control**, que es justo donde suele aparecer la primera “curva” cognitiva del curso.\n",
     "\n",
     "---\n",
     "\n",
-    "# 📝 Quiz 2 – Fundamentos de Programación\n",
+    "# Quiz 2 – Fundamentos de Programación\n",
     "\n",
     "**Curso:** Fundamentos de Programación\n",
     "**Código:** 314029\n",
     "\n",
-    "📅 **Fecha de realización:** **jueves 26 de marzo de 2026**\n",
-    "⏰ **Horario:** 8:00 a.m. – 12:00 m. (se sugiere aplicar el quiz en los primeros 30 minutos)\n",
+    "**Fecha de realización:** **jueves 26 de marzo de 2026**\n",
+    "**Horario:** 8:00 a.m. – 12:00 m. (se sugiere aplicar el quiz en los primeros 30 minutos)\n",
     "⏱ **Duración del quiz:** 30 minutos\n",
-    "👤 **Modalidad:** Individual\n",
-    "💻 **Entorno:** Jupyter Notebook\n",
-    "📊 **Valor sugerido:** 5% de la nota final\n",
+    "**Modalidad:** Individual\n",
+    "**Entorno:** Jupyter Notebook\n",
+    "**Valor sugerido:** 5% de la nota final\n",
     "\n",
     "---\n",
     "\n",
-    "## 📚 Contenidos evaluados\n",
+    "##  Contenidos evaluados\n",
     "\n",
     "**Capítulos 4, 5 y 6**\n",
     "\n",
