llegué a operadores relacionales

--- a/clases/unidad1/4_apendice_google_colab.ipynb
+++ b/clases/unidad1/4_apendice_google_colab.ipynb
@@ -269,64 +269,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10e55ccf",
-   "metadata": {},
-   "source": [
-    "# Estructura general para todas las clases\n",
-    "\n",
-    "Dame, por favor, un diseño de clase, con el enfoque: \"Aula Invertida, STEAMS y De aprendizaje basado en problemas y proyectos(ABPP)\" sobre: \"\", siguiendo la estructura:  \n",
-    "\n",
-    "1. Título de la clase   \n",
-    "   \n",
-    "2. Objetivos de aprendizaje que incluyan los indicadores del logro de estos objetivos.\n",
-    "   \n",
-    "3. Un mapa conceptual que resuma la clase elaborado en Graphviz de Python con nodos y edges de diferentes formas, colores y rellenos y renderizado en la siguiente ubicación: `\"C:/Users/marco/Downloads\"`. No olvides el parámetro `view = True` para el método `render()` de Graphviz. Para este mapa controla las superposiciones de los nodos con: graph [overlap=false]; // Elimina superposiciones (puede aumentar el espacio) \n",
-    "graph [overlap=\"scalexy\"]; // Escala el gráfico para evitar overlaps\n",
-    "graph [overlap=\"compress\"]; // Comprime el grafo sin overlaps  \n",
-    "   \n",
-    "4. Dame elementos históricos y epistemológicos asociados a esta clase, pero contados como un cuento al estilo de un cuentero antioqueño en Colombia. Incluye imágenes de los protagonistas históricos de esta clase.   \n",
-    "   \n",
-    "5. Contenido de la clase. Que el contenido parta de una situación real para llegar a una constitución del modelo matemático que represente tal situación real.    \n",
-    "       \n",
-    "   \n",
-    "7. Actividades de aprendizaje: que incluya pruebas de escritorio para los algoritmos en forma verbal y seudo código, diagrama de flujo, y la implementación del algoritmo en lenguaje Python.   \n",
-    "   \n",
-    "8. Incluye una canción o un poema que ayude a interiorizar y fijar los conceptos asociados a esta clase.   \n",
-    "   \n",
-    "9.  Tarea o actividades de ejercitación y fijación.  \n",
-    "    \n",
-    "10. Evaluación incluyendo diez proyectos, un ejemplo de quiz y un ejemplo de parcial.  \n",
-    "    \n",
-    "11. Diseño de actividad de retroalimentación.   \n",
-    "    \n",
-    "12. Dame un vocabulario y frases del idioma inglés asociadas a esta clase.  \n",
-    "\n",
-    "13.  Incluye apéndice para la clase sobre desarrollo de habilidades para trabajar en equipo y de asertividad y empatía para relacionarnos. También elementos de la inteligencia emocional para presentar pruebas sin temor y sin realizar fraude en ellas. Y Actividades para desarrollar la habilidad de la Tolerancia    \n",
-    "     \n",
-    "14. Incluye 5 referentes en didáctica de la matemática que estén de acuerdo a la propuesta didáctica de esta clase. Adiciona a estos referentes a Raymond Duval (Representaciones y cambios de representación para la adquisición de conceptos matemáticos) y a Jeannette Wing (Desarrollo del pensamiento computacional). Dejame todos estos referentes ordenados de acuerdo a las normas APA. Incluye un referente en didáctica de la matemática que fundamente el uso del Enfoque de Aula Invertida, uno que fundamente el enfoque STEAMS y finalmente otro que fundamente el enfoque de Aprendizaje Basado en Problemas y Proyectos (ABPP)\n",
-    "  \n",
-    "\n",
-    "Pero  que este diseño sea para que el estudiante pueda aprender experimentando en cuadernos Jupyter con funciones de usuario y animaciones y visualizaciones en Python.    \n",
-    "\n",
-    "En particular utiliza para el diseño de clase a Numpy, Pandas, SymPy, Matplotlib.pyplot, Seaborn, Plotly, ipywidgets, matplotlib.animation y Jupyter Notebook.    \n",
-    "\n",
-    "Cada vez que utilices `matplotlib.animacion` no olvides incluir el uso de `IPython. display` para la renderización de estas animaciones a través de Jupyter Notebook.    \n",
-    "\n",
-    "No olvides darme los diseños de clase con las ecuaciones matemáticas delimitadas con signo de dólar $ para que VS Code si me renderice estas expresiones del lenguaje latex. \n",
-    " \n",
-    "\n",
-    "* Obtenga el libro guía: Fundamentos de Programación, [aquí:](https://read.amazon.com/?_encoding=UTF8&asin=B0BBB56L4X&consumptionLimitReached=false&deviceAccountIds=A1032123ZASLV79K77QP&hasMultimedia=false&requiredCapabilities=EBOK_PURCHASE_ALLOWED&ref=sr_rn_kfw)  \n",
-    "* Obtenga el programa del curso de Fundamentos de programación [aquí](https://github.com/marco-canas/fundamentos_de_programacion/blob/main/programa/Programa_Fundamentos_Programacion.md)   \n",
-    "  \n",
-    "* El cronograma o clase  a clase de este curso lo puede obtener [aquí]()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "ded1813a",
    "metadata": {},
    "source": [
-    "# Estructura de la clase    \n",
+    "# Clase sobre cómo usar Google Colab como editor de Python en Línea.  \n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -334,6 +282,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e3066127",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdd97412",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99b39eaf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d38a7eba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -359,9 +331,9 @@
     "\n",
     "* Lunes 8-12:    \n",
     "* Martes 9-11 M:  \n",
-    "* Martes 2 a 6 PM: Álgebra Lineal.   \n",
+    "* Martes 2 a 6 PM:   \n",
     "* Miércoles 9 a 11 M:  \n",
-    "* Jueves 8 a 12 M: Funamentos de Programación\n",
+    "* Jueves 8 a 12 M: \n",
     "* Jueves 2 a 6 PM:    \n",
     "* Viernes 8 - 12 M:    \n",
     "* Sábados 8-12 Asesorías y espacio para retroalimentación y apoyo al trabajo independiente.   "
