ya incluí buena cantidad de imagenes

--- a/clases/unidad1/2_chapter.ipynb
+++ b/clases/unidad1/2_chapter.ipynb
@@ -509,7 +509,7 @@
    "id": "c6a9a310",
    "metadata": {},
    "source": [
-    "<img src = ''>"
+    "<img src = 'https://github.com/marco-canas/fundamentos_de_programacion/blob/main/images/elegir_localizacion_instalacion_3.jpeg?raw=true'>"
    ]
   },
   {
@@ -527,7 +527,7 @@
    "id": "8f8ad00a",
    "metadata": {},
    "source": [
-    "<img src = ''>"
+    "<img src = 'https://github.com/marco-canas/fundamentos_de_programacion/blob/main/images/opciones_instalaci%C3%B3n_avanzada_4.jpeg?raw=true'>"
    ]
   },
   {
@@ -545,7 +545,7 @@
    "id": "36d959a3",
    "metadata": {},
    "source": [
-    "<img src = ''>"
+    "<img src = 'https://github.com/marco-canas/fundamentos_de_programacion/blob/main/images/completando_anaconda_prompt_8.jpeg?raw=true'>"
    ]
   },
   {
@@ -563,7 +563,7 @@
    "id": "399562c5",
    "metadata": {},
    "source": [
-    "<img src = ''>"
+    "<img src = 'https://github.com/marco-canas/fundamentos_de_programacion/blob/main/images/instalacion_completa_6.jpeg?raw=true'>"
    ]
   },
   {
@@ -589,7 +589,7 @@
    "id": "f50d4e81",
    "metadata": {},
    "source": [
-    "<img src = 'anaconda_navigator.png'>"
+    "<img src = 'https://github.com/marco-canas/fundamentos_de_programacion/blob/main/images/anaconda_navegator_9.jpeg?raw=true'>"
    ]
   },
   {
@@ -1038,8 +1038,9 @@
     "\n",
     "* Lunes 8-12:    \n",
     "* Martes 9-11 M:  \n",
-    "* Martes 2 a 6 PM:   \n",
-    "* Miércoles 9 a 11 M:   \n",
+    "* Martes 2 a 6 PM: Álgebra Lineal.    \n",
+    "* Miércoles 9 a 11 M: \n",
+    "* Jueves 8-12 M: Fundamentos de programación.    \n",
     "* Jueves 2 a 6 PM:    \n",
     "* Viernes 8 - 12 M:    \n",
     "* Sábados 8-12 Asesorías y espacio para retroalimentación y apoyo al trabajo independiente.   "
