imagenes de la instalación de anaconda completa

--- a/clases/unidad1/2_chapter.ipynb
+++ b/clases/unidad1/2_chapter.ipynb
@@ -453,7 +453,7 @@
    "id": "31b6219e",
    "metadata": {},
    "source": [
-    "<img src = 'instalacion_siguiente.png'>"
+    "<img src = 'https://github.com/marco-canas/fundamentos_de_programacion/blob/main/images/inicio_instalacion_anaconda_1.jpg?raw=true'>"
    ]
   },
   {
@@ -491,7 +491,7 @@
    "id": "0c2ca5f8",
    "metadata": {},
    "source": [
-    "<img src = ''>"
+    "<img src = 'https://github.com/marco-canas/fundamentos_de_programacion/blob/main/images/seleccion_tipo_instalacion_2.jpeg?raw=true'>"
    ]
   },
   {
