inicio de imagenes de anaconda prompt

--- a/clases/unidad1/2_chapter.ipynb
+++ b/clases/unidad1/2_chapter.ipynb
@@ -651,7 +651,7 @@
     "\n",
     "Ve a Inicio (Parte inferior izquierda de tu computador) y escribe Anaconda Prompt para abrir para abrir la Terminal asociada a Anaconda.  \n",
     "\n",
-    "<img src = 'abrir_anaconda_prompt.png'>"
+    "<img src = 'https://github.com/marco-canas/fundamentos_de_programacion/blob/main/images/terminal_anaconda_prompt.png?raw=true'>"
    ]
   },
   {
