código del curso listo en el formato de clase

--- a/clases/0_formato_clases_fundamentos_programacion/4_formato_clase_funda_programacion.ipynb
+++ b/clases/0_formato_clases_fundamentos_programacion/4_formato_clase_funda_programacion.ipynb
@@ -119,6 +119,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "56593158",
+   "metadata": {},
+   "source": [
+    "## Código del curso: 314029"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d11ab06d",
    "metadata": {
     "slideshow": {
