--- a/clases/unidad1/3_chapter.ipynb
+++ b/clases/unidad1/3_chapter.ipynb
@@ -108,6 +108,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1aab039d",
+   "metadata": {},
+   "source": [
+    "## Código del curso: 314029"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d11ab06d",
    "metadata": {
     "slideshow": {
