video para operadores relacionales en Python

--- a/clases/0_formato_clases_fundamentos_programacion/4_formato_clase_funda_programacion.ipynb
+++ b/clases/0_formato_clases_fundamentos_programacion/4_formato_clase_funda_programacion.ipynb
@@ -371,22 +371,8 @@
     "* Miércoles 9 a 11 M:  \n",
     "* Jueves 8 a 12 M: Funamentos de Programación\n",
     "* Jueves 2 a 6 PM:    \n",
-    "* Viernes 8 - 12 M:    \n",
-    "* Sábados 8-12 Asesorías y espacio para retroalimentación y apoyo al trabajo independiente.   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ae114e14",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Horarios de monitoría y asesoría   \n",
-    "\n",
-    "* Asesoría: Sábados de 8 a 12 en el aula que nos asigne la sección de medios y logística. \n"
+    "* Viernes 8 - 12 M: Asesorías y espacio para retroalimentación y apoyo al trabajo independiente.    \n",
+    "* Sábados 8-12: PIVU Puerto Libertador.  "
    ]
   },
   {
