empecé a diseñar clase sobre google colab para fundamentos de programación.

--- a/clases/unidad1/4_apendice_google_colab.ipynb
+++ b/clases/unidad1/4_apendice_google_colab.ipynb
@@ -272,7 +272,9 @@
    "id": "ded1813a",
    "metadata": {},
    "source": [
-    "# Clase sobre cómo usar Google Colab como editor de Python en Línea.  \n",
+    "# Clase sobre cómo usar Google Colab como editor de Python en Línea para el curso de Fundamentos de Programación (Python y SQL para ciencia de datos).  \n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n"
@@ -592,7 +594,14 @@
    "id": "c5ff61b1",
    "metadata": {},
    "source": [
-    "# Fundamentar Pedagógica y didácticamente mi propuesta de enseñanza  \n",
+    "# Fundamentar Pedagógica y didácticamente mi propuesta de enseñanza  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1e80558",
+   "metadata": {},
+   "source": [
     "\n",
     "## Prompt  \n",
     "\n",
@@ -680,13 +689,20 @@
    "metadata": {},
    "source": [
     "\n",
-    "### 4. **Wing, Jeannette (2006)**\n",
+    "# 4. **Wing, Jeannette (2006)**\n",
     "\n",
     "* Introduce el término **pensamiento computacional** como una habilidad básica, tan fundamental como leer, escribir o hacer matemáticas.\n",
     "* Define que debe enseñarse desde la escuela hasta la universidad.\n",
-    "  👉 Tu planteamiento de aplicarlo en **todos los niveles** y en **educación superior** tiene un sustento directo aquí.\n",
+    "  - Tu planteamiento de aplicarlo en **todos los niveles** y en **educación superior** tiene un sustento directo aquí.\n",
     "\n",
-    "---\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69a58a5b",
+   "metadata": {},
+   "source": [
     "\n",
     "### 5. **NCTM (National Council of Teachers of Mathematics, 2000, 2014)**\n",
     "\n",
@@ -810,7 +826,14 @@
    "metadata": {},
    "source": [
     "\n",
-    "En este marco, el uso de entornos como **Jupyter Notebooks** y lenguajes como **Python, LaTeX, Markdown e inglés** no debe interpretarse como una rivalidad con la enseñanza tradicional de la matemática, sino como una **ampliación de los registros de representación** que describió **Duval (1993, 2006)**. Según su teoría semiótica, el aprendizaje significativo se potencia cuando el estudiante logra traducir y articular distintos sistemas de representación: gráfico, algebraico, numérico, verbal y, en nuestro tiempo, digital.\n",
+    "En este marco, el uso de entornos como **Jupyter Notebooks** y lenguajes como **Python, LaTeX, Markdown e inglés** no debe interpretarse como una rivalidad con la enseñanza tradicional de la matemática, sino como una **ampliación de los registros de representación** que describió **Duval (1993, 2006)**. Según su teoría semiótica, el aprendizaje significativo se potencia cuando el estudiante logra traducir y articular distintos sistemas de representación: gráfico, algebraico, numérico, verbal y, en nuestro tiempo, digital.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7eeb17dd",
+   "metadata": {},
+   "source": [
     "\n",
     "De igual manera, el **Enfoque Ontosemiótico de Godino (2002, 2017)** muestra que los significados matemáticos emergen de prácticas diversas, lo que justifica la incorporación de estos lenguajes como recursos que enriquecen las configuraciones de práctica matemática, en sintonía con las exigencias de la investigación y la práctica profesional.\n",
     "\n",
