inicio de introducción a sql

--- a/clases/unidad1/4_apendice_google_colab_fundamentos_programacion.ipynb
+++ b/clases/unidad1/4_apendice_google_colab_fundamentos_programacion.ipynb
@@ -4,7 +4,16 @@
       "cell_type": "markdown",
       "id": "35a0e256",
       "metadata": {},
-      "source": []
+      "source": [
+        "<table align=\"left\">\n",
+        "  <td>\n",
+        "    <a href=\"https://colab.research.google.com/github/marco-canas/fundamentos_de_programacion/blob/main/clases/unidad1/2_chapter.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://kaggle.com/kernels/welcome?src=https://github.com/marco-canas/fundamentos_de_programacion/blob/main/clases/unidad1/2_chapter.ipynb\"><img src=\"https://kaggle.com/static/images/open-in-kaggle.svg\" /></a>\n",
+        "  </td>\n",
+        "</table>"
+      ]
     },
     {
       "cell_type": "markdown",
