vínculo al capítulo 4

--- a/clases/unidad1/1_chapter.ipynb
+++ b/clases/unidad1/1_chapter.ipynb
@@ -1834,7 +1834,7 @@
    "id": "fbe5ccec",
    "metadata": {},
    "source": [
-    "### Continue su aprendizaje en la siguiente clase a través del siguiente [vínculo]()"
+    "### Continue su aprendizaje en la siguiente clase (Capítulo 2) a través del siguiente [vínculo](https://github.com/marco-canas/fundamentos_de_programacion/blob/main/clases/unidad1/2_chapter.ipynb)"
    ]
   },
   {
