--- a/clases/unidad1/2_chapter.ipynb
+++ b/clases/unidad1/2_chapter.ipynb
@@ -372,6 +372,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f87fc295",
+   "metadata": {},
+   "source": [
+    "# Fundamentos de Programacion\n",
+    "\n",
+    "## Capítulo 2\n",
+    "\n",
+    "Estamos viendo *cómo se trabaja* con **cuaderno jupyter**. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "988b34fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 17 \n",
+    "x "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3f6f9353",
    "metadata": {},
    "source": [
@@ -1050,8 +1084,8 @@
     "* Miércoles 9 a 11 M: \n",
     "* Jueves 8-12 M: Fundamentos de programación.    \n",
     "* Jueves 2 a 6 PM:    \n",
-    "* Viernes 8 - 12 M:    \n",
-    "* Sábados 8-12 Asesorías y espacio para retroalimentación y apoyo al trabajo independiente.   "
+    "* Viernes 8 - 12 M: Asesorías y espacio para retroalimentación y apoyo al trabajo independiente.    \n",
+    "* Sábados 8-12: PIVU Puerto Libertador.    "
    ]
   },
   {
@@ -1301,11 +1335,25 @@
    "metadata": {},
    "source": [
     "\n",
-    "### 1. **Seymour Papert (1980, 1996)**\n",
+    "### 1. **Seymour Papert (1980, 1996)**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f78d8a4c",
+   "metadata": {},
+   "source": [
     "\n",
     "* Padre del **constructionism**, con su obra *Mindstorms* (1980).\n",
     "* Plantea que la computadora no es solo una herramienta de cálculo, sino un **medio para pensar** y construir conocimiento matemático.\n",
-    "* Sostiene que programar permite a los estudiantes interactuar con conceptos matemáticos de manera experimental.\n",
+    "* Sostiene que programar permite a los estudiantes interactuar con conceptos matemáticos de manera experimental.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "763d23a4",
+   "metadata": {},
+   "source": [
     "* Su lema central: *“Los niños no aprenden la matemática de las computadoras; aprenden matemáticas con las computadoras”*.\n",
     "  - Esto respalda tu idea de usar Python, LaTeX y Markdown como lenguajes que median la construcción de significados matemáticos.\n",
     "\n",
@@ -1318,7 +1366,14 @@
    "metadata": {},
    "source": [
     "\n",
-    "# 2. **Alan H. Schoenfeld (1985, 1992)**\n",
+    "# 2. **Alan H. Schoenfeld (1985, 1992)**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d23bcca",
+   "metadata": {},
+   "source": [
     "\n",
     "* Destaca la importancia de la **resolución de problemas** en la enseñanza de las matemáticas.\n",
     "* Su enfoque conecta con la idea de que el pensamiento computacional fomenta la **formulación, exploración y verificación de conjeturas** en ambientes como Jupyter Notebooks.\n",
@@ -1399,7 +1454,14 @@
    "metadata": {},
    "source": [
     "\n",
-    "# 7. **Godino, Juan D. y el Enfoque Ontosemiótico (EOS)**\n",
+    "# 7. **Godino, Juan D. y el Enfoque Ontosemiótico (EOS)**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31ea3c91",
+   "metadata": {},
+   "source": [
     "\n",
     "* Plantea que la matemática se aprende a través de **configuraciones de prácticas y significados**.\n",
     "* El uso de Jupyter y lenguajes computacionales enriquece esas prácticas al incluir **experimentación, validación y comunicación científica**.\n",
@@ -1414,7 +1476,14 @@
    "metadata": {},
    "source": [
     "\n",
-    "# 8. **Sociedades Matemáticas y Computacionales**\n",
+    "# 8. **Sociedades Matemáticas y Computacionales**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67cda5e4",
+   "metadata": {},
+   "source": [
     "\n",
     "* **ACM (Association for Computing Machinery)** y **IEEE** han publicado directrices donde destacan que el pensamiento computacional debe ser transversal a todas las disciplinas.\n",
     "* En Latinoamérica, la **Sociedad Colombiana de Matemáticas Educativa (ASOCOLME)** también promueve la integración de tecnologías en la didáctica.\n",
@@ -1428,7 +1497,14 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Cómo integrar estos referentes con tu postura\n",
+    "# Cómo integrar estos referentes con tu postura\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d78c4b6f",
+   "metadata": {},
+   "source": [
     "\n",
     "1. **Papert, Wing y Piaget-Vygotsky** sustentan que el pensamiento computacional debe enseñarse desde todos los niveles.\n",
     "2. **Schoenfeld, Duval y Godino** muestran que estas herramientas enriquecen la comprensión matemática sin sustituir los enfoques tradicionales.\n",
