--- a/clases/unidad4/13_intro_sql.ipynb
+++ b/clases/unidad4/13_intro_sql.ipynb
@@ -280,13 +280,55 @@
    "id": "e3066127",
    "metadata": {},
    "source": [
-    "## Diseño de clase\n",
+    "## Diseño de clase\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32e92678",
+   "metadata": {},
+   "source": [
     "\n",
-    "**Tema:** Introducción al lenguaje SQL para ciencia de datos\n",
-    "**Ubicación en el curso:** Clase de cierre del curso *Fundamentos de programación con Python y SQL para ciencia de datos*\n",
-    "**Programa:** Formación de matemáticos\n",
-    "**Duración:** 3 horas\n",
-    "**Modalidad:** Taller teórico–práctico con resolución de problemas\n",
+    "**Tema:** Introducción al lenguaje SQL para ciencia de datos\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fc15c57",
+   "metadata": {},
+   "source": [
+    "**Ubicación en el curso:** Clase de cierre del curso *Fundamentos de programación con Python y SQL para ciencia de datos*\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abd79372",
+   "metadata": {},
+   "source": [
+    "**Programa:** Formación de matemáticos\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f42122e8",
+   "metadata": {},
+   "source": [
+    "**Duración:** 3 horas\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "697b6ac3",
+   "metadata": {},
+   "source": [
+    "**Modalidad:** Taller teórico–práctico con resolución de problemas\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b5bb674",
+   "metadata": {},
+   "source": [
     "**Enfoque:** Pensamiento computacional, modelación y análisis de datos\n",
     "\n",
     "---\n"
@@ -344,7 +386,14 @@
     "\n",
     "> SQL puede interpretarse como un lenguaje formal para operar sobre conjuntos de datos.\n",
     "\n",
-    "---\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97acad94",
+   "metadata": {},
+   "source": [
     "\n",
     "## 4. Saberes a desarrollar\n",
     "\n",
