--- a/clases/unidad1/3_chapter.ipynb
+++ b/clases/unidad1/3_chapter.ipynb
@@ -5126,7 +5126,7 @@
    "id": "19995bab",
    "metadata": {},
    "source": [
-    "[Próxima clase: Capítulo 4. Expresiones condicionales en Python]()"
+    "[Próxima clase: Capítulo 4. Expresiones condicionales en Python](https://github.com/marco-canas/fundamentos_de_programacion/blob/main/clases/unidad2/4_chapter.ipynb)"
    ]
   },
   {
@@ -5479,31 +5479,7 @@
    "id": "c5ff61b1",
    "metadata": {},
    "source": [
-    "# Fundamentar Pedagógica y didácticamente mi propuesta de enseñanza  \n",
-    "\n",
-    "## Prompt  \n",
-    "\n",
-    "Dame referentes en didáctica de las matemáticas que sustente mi creencia y perspectiva que piensa que el desarrollo del pensamiento computacional debe fomentarse desde todos los niveles de escolaridad, más aún en educación superior con el animo de desarrollar la capacidad de leer de manera interactiva y experimental y así, con los cuadernos Jupyter, la enseñanza de los lenguajes Latex, MarkDown, Python e inglés, aportar al desarrollo de los profesionales de nuestra Universidad sin rivalizar con la postura de enseñanza que piensa que es inadecuado presentar paralelamente en la enseñanza de las matemáticas, los lenguajes que menciono, que creo pueden contribuir al aprendizaje de una matemática de manera significativa, y más cercana a lo que la empresa privada y pública requiere de nuestros egresados.  \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8dda41cc",
-   "metadata": {},
-   "source": [
-    "\n",
-    "Mi planteamiento tiene mucho sustento en la **didáctica de las matemáticas contemporánea** y en corrientes relacionadas con el **pensamiento computacional, la alfabetización digital y el aprendizaje significativo**. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8f64d150",
-   "metadata": {},
-   "source": [
-    "Estos son referentes y marcos conceptuales que pueden servir para  citar o usar y fortalecer mi perspectiva:\n",
-    "\n",
-    "---\n"
+    "# Fundamentar Pedagógica y didácticamente mi propuesta de enseñanza  \n"
    ]
   },
   {
